generato 15 navi casuali

--- a/index.html
+++ b/index.html
@@ -8,196 +8,196 @@
   </head>
   <body>
     <div class="container">
-      <div class="nave">
+      <div id='1' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='2' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='3' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='4' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='5' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='6' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='7' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='8' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='9' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='10' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='11' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='12' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='13' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='14' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='15' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='16' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='17' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='18' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='19' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='20' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='21' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='22' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='23' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='24' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='25' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='26' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='27' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='28' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='29' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='30' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='31' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='32' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='33' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='34' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='35' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='36' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='37' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='38' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='39' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='40' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='41' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='42' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='43' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='44' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='45' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='46'v class="nave">
 
       </div>
-      <div class="nave">
+      <div id='47' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='48' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='49' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='50' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='51' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='52' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='53' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='54' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='55' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='56' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='57' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='58' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='59' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='60' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='61' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='62' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='63' class="nave">
 
       </div>
-      <div class="nave">
+      <div id='64' class="nave">
 
       </div>
     </div>
