--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title></title>
   </head>
   <body>
+    <span>Navi Colpite: <span id="navi_colpite"></span></span>
+    <span>Colpi Mancati: <span id="navi_mancate"></span></span>
+    
     <div class="container">
-      <div id='1' class="nave">
+      <div id="1" class="nave">
 
       </div>
       <div id='2' class="nave">
